test/tests/stages/9_functions/valid/extra_credit/goto_label_multiple_functions.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(foo)
  (
  void
  )
  {
  goto
  identifier(label)
  ;
  return
  const int(0)
  ;
  identifier(label)
  :
  return
  const int(5)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(label)
  ;
  return
  const int(0)
  ;
  identifier(label)
  :
  return
  identifier(foo)
  (
  )
  ;
  }
