test/tests/stages/9_functions/invalid_types/conflicting_function_declarations.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(5)
  ;
  }
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  )
  {
  return
  const int(4)
  ;
  }
